--- a/gb/24/8/20/n14314321.md
+++ b/gb/24/8/20/n14314321.md
@@ -6,22 +6,22 @@
 <h6>天道好还！要知今日所受之果，但看昨日己造之因。(Shutterstock)
 </h6>
 <hr>
-<p>在五代十国的乱世中，西蜀和南唐相对平静，艺术家也得到比较良好的发挥环境。南唐的处士徐熙和西蜀翰林待诏黄筌都擅长花鸟画，是为此中两大家，各有擅场，人们以“黄家富贵，徐家野逸”来形容。</p>
+<p>在五代十国的乱世中，西蜀和南唐相对平静，艺术家也得到比较良好发挥的环境。西蜀翰林待诏黄筌和南唐的处士徐熙都擅长花鸟画，是为此中两大家，各有擅场，人们以“黄家富贵，徐家野逸”来形容。</p>
 <figure id="attachment_10514097" aria-describedby="caption-attachment-10514097" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/06/153bb1f2bb58b8c8_ttl7dayKc8_____________.jpg"><img decoding="async" class="size-large wp-image-10514097" src="https://i.epochtimes.com/assets/uploads/2018/06/153bb1f2bb58b8c8_ttl7dayKc8_____________-600x351.jpg" alt="五代 黄筌《写生珍禽图》（公有领域）" width="600" b="351" /></a><figcaption id="caption-attachment-10514097" class="wp-caption-text">五代 黄筌画给儿子摹画的《写生珍禽图》（公有领域）</figcaption></figure>
-<h2>和徐熙的故事</h2>
+<h2>黄筌和徐熙的故事</h2>
 <p>黄筌（公元903年–965年）是成都人，他的工笔画在当代很早就出了名。他学画取法诸名家，宋代《宣和画谱》赞誉他“兼有众体之妙，故前无古人，后无来者。……凡山花野草，幽禽异兽，溪岸江岛，钓艇古槎，莫不精绝。”</p>
-<p>十七岁时，他侍奉前蜀后主王衍为待诏，到了后蜀时，后主孟昶加官捡校少府监，累迁如京副使。北宋平蜀地后，黄筌和两个儿子以及弟弟惟亮，都进入宋的翰林图画院工作，名声大噪。后来黄筌的画成了院体画的模范。</p>
+<p>十七岁时，他侍奉前蜀后主王衍为待诏，到了后蜀时，后主孟昶加官检校少府监，累迁如京副使。北宋平蜀地后，黄筌和两个儿子以及弟弟惟亮，都进入宋的翰林图画院工作，名声大噪。后来黄筌的画成了院体画的模范。</p>
 <p>徐熙（公元886年–975年）在五代末虽为布衣，然他的家族累世为江南显族，他本人尚高雅，寓兴闲放，以墨笔画花鸟，带着文人气息，看似不经意的“野逸”姿态，草草几笔随心意所至，再应手点染略施丹粉，即神气活现，生动极了。</p>
 <p>南唐李后主把徐熙的画作都收进内府，降宋后，内府所藏尽入宋廷。宋太宗读书览画看到徐熙的石榴图，一树生百余果，其奇伟的气势、豪放的笔力，让他拍案叫绝，叹道：“花果之妙，吾独知有熙矣，其余不足观！”（《宋朝名画评》）宋代《宣和画谱》赞誉之画“骨气风神，为古今之绝笔”！</p>
 <figure id="attachment_14314327" aria-describedby="caption-attachment-14314327" style="width: 301px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14314327-e37dc513bb93c707639085365ac0a555.jpg"><img decoding="async" class=" wp-image-14314327" src="https://i.epochtimes.com/assets/uploads/2024/08/id14314327-e37dc513bb93c707639085365ac0a555-600x1741.jpg" alt="" width="301" b="873" /></a><figcaption id="caption-attachment-14314327" class="wp-caption-text">徐熙 《玉堂富贵》图轴（台北 故宫博物院提供）</figcaption></figure>
-<p>后来，南唐归宋后，徐熙来到京师，他送了自己的画作进画院品定他的画格。此时，黄筌职掌画院，一看徐熙的画，心中厌恶，恐怕他也入了画院，很可能就要夺去自己的地位、夺走自己的供奉之宠。于是，他故意把徐熙骨气风神绝妙的野逸之作说成“粗恶不入格”，就把他罢退了。（《梦溪笔谈》《卷十七书画》）</p>
+<p>南唐归宋后，徐熙来到京师，他送了自己的画作进画院品定他的画格。此时，黄筌职掌画院，一看徐熙的画，心中厌恶，恐怕他也入了画院，很可能就要夺去自己的地位、夺走自己的供奉之宠。于是，他故意把徐熙骨气风神绝妙的野逸之作说成“粗恶不入格”，就把他罢退了。（《梦溪笔谈》《卷十七书画》）</p>
 <p>黄筌为什么会害怕徐熙可能取代了自己的地位呢？宋代的书画大师、品鉴大家米芾说：“黄筌画不足收，易摹，徐熙画不可摹。”道出了徐熙的神妙之才不可仿效。而黄筌一派的花鸟画作笔迹精细，妙在赋色，用笔极细，虽然几乎不见墨迹，却是容易摹效的，气韵不及徐熙远甚。这个差异黄筌自己其实是心知肚明，但是他当时没有雅量去赞赏徐熙的成就，也不能接纳徐熙成为自己的同僚，反而从中作梗，让他绝缘于画院。这给徐熙带去苦难！这一业因种下的果怎么了结呢？</p>
 <figure id="attachment_14315877" aria-describedby="caption-attachment-14315877" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14315877-268ca40c43fb05d30d762794c974797e.jpeg"><img loading="lazy" decoding="async" class="size-large wp-image-14315877" src="https://i.epochtimes.com/assets/uploads/2024/08/id14315877-268ca40c43fb05d30d762794c974797e-600x330.jpeg" alt="" width="600" b="330" /></a><figcaption id="caption-attachment-14315877" class="wp-caption-text">因果循还无穷已。(Shutterstock)</figcaption></figure>
 <h2>来世之报</h2>
 <p><strong>时光易逝，隔世七百年，两个生命可能后续前缘吗？</strong></p>
 <p>清朝时，通政（掌内外章疏，臣民密封申诉之事的官职）罗仰山在礼部任职时，因为同僚的排挤，处处受掣肘，让他做事就如同行走在荆棘中一般困难。罗仰山本性小心拘泥，久而久之，积愤成疾，落得郁郁寡欢，精神委靡，了无生趣。</p>
 <p>有一天，他闷坐时，忽然梦见自己来到一座山中，涧中花放水流，风和日丽，让他神清气爽，心中的烦闷一扫而空。他沿着溪边漫步而行，来到一间茅草屋门口，这时屋中出来一位老翁邀他进屋小坐，两人谈话甚为投契。老翁见他脸上难掩愁容，便问了缘由。罗仰山就将自己多年的苦楚一一说了出来。</p>
-<p>老翁听后与他同叹，宽慰他说：“这其中有夙世的因缘，只是你不能知晓。七百年前，你是宋代的画家黄筌，而排挤你的某某则是徐熙。徐熙的画作本应在你之上，但你害怕他夺去你在朝廷的供奉之宠，便用歪曲的巧言排挤他，使他失去机会入画院，以致沉沦困顿，含恨而终。</p>
+<p>老翁听后与他同叹，宽慰他说：“这其中有夙世的因缘，只是你不能知晓。七百年前，你是宋代的画家黄筌，而排挤你的某某则是徐熙。徐熙的画作本应在你之上，但你害怕他夺去你在朝廷的供奉之宠，便用歪曲的巧言排挤他，使他失去机会入画院，以致生活困顿，抱憾而终。</p>
 <p>此后几世的辗转轮回，你们未曾再相遇。这一世你们因缘际会，他终于得报七百年前的宿怨。你今日所遭遇的，正如同你当年加诸他的，有何可埋怨的呢？！你看，这世间的一切都在应验着循环报应，这是天道；有施必有报，这是人情。已经种下因，最终必会结果。这种因果感应的契机，如同磁石吸引铁针，若不靠近则罢，一旦靠近便会牢牢相吸，难以分开。因果的相遇，就像日月的运转，必定会有交会之时。世间种种害人的手段，其实最终害的是自己。</p>
 <p>我在过去世中与你也有旧缘，因为你尚未能觉悟，故而说出这段让你终日忧患的过往因缘，让你明白今日所遭之难的由来。你与某某之间的恩怨已经了结，从今以后，但愿你务必谨慎，不要再造新的业因了。”</p>
 <p>听完老翁的一席话，罗仰山顿时豁然开朗，胜负之心尽消。数日后，他的旧疾也不药而愈了。</p>
@@ -31,40 +31,38 @@
 <p>（后记：通政罗仰山的故事是纪晓岚亲述他十几岁时听霍易书（曾任奉天知府）先生讲述的，记载在《阅微草堂笔记》中）。@*</p>
 <p>责任编辑：王愉悦#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/19/n10071544.md#1">唐恩：从天安门自焚骗局看善恶有报</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/1/n10267894.md#1">华人协会主席：神韵告诉我们善恶有报</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/26/n11003708.md#1">神韵天幕令人惊艳 上市公司高管感悟善恶有报</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/1/n12587271.md#1">人长猪蹄 猪长人手 见证人畜间轮回转生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/16/n14291649.md#1">雷为何击打这些人？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281008.md#1">他即将就木为何被延了寿？自己的梦境他人因何能知晓？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/9/1/24/n2408348.md#1">积阴德 改大命 名传千古──许叔微</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/22/n14255214.md#1">一个空间通连两个时空 奇特梦境竟然真实不虚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/8/9/29/n2280053.md#1">林孝廉得神明赞许和庇佑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/11/n2425958.md#1">只因诗两句 夺却状元科</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/19/n14534405.md#1">他说了一句话  冤孽紧追不舍穿越前生到今生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/4/n14429839.md#1">老僧劝重德改命 钱尚书未听祸及子孙</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/3/13/n14457391.md#1">两个书生多次考试落榜 睡和尚透露真相</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/3/13/n14457390.md#1">善人不可使无后 行善后代或可延寿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/3/13/n14457389.md#1">神仙为何赠给他们每人一颗眼珠</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/6/n14431076.md#1">他无意中救下两条人命 天意让其多年后得回报</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/3/17/n14460725.md#1">【未解之谜】惊人的业力法则 泰国医院院长的奇遇（下）</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/8/n11242784.md#1" target="_blank">【征文】张东园：传统文化中的善恶有报事例</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/5/19/n3874295.md#1" target="_blank">飞瀑：中共酷刑——灌水</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/26/n10513103.md#1" target="_blank">唐铭：维权老兵需了解韩战的中国战俘刺青浪潮</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/9/25/n4257161.md#1" target="_blank">慧真：世纪谎言  自焚伪案</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312505.md#1">【未解之谜】美国牧师濒死 惊见撒旦控制人类计划</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308151.md#1">香港凉茶趣谈：凉茶不“凉” 龟苓膏最初功用非“清热解毒”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302523.md#1">【古道人生】修佛后他足跛眼盲被雷击死 这是佛无灵吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313813.md#1">【未解之谜】CIA心灵部队（1）神秘人带来的特殊任务</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310266.md#1">黄历七月半盂兰盆会 怎样才得以“超度”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/22/n14315614.md#1">【时事军事】数千俄军被困 战争进入基辅的轨道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/21/n14315457.md#1">【马克时空】乌炸塌塞姆河三桥 断三千俄军退路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312338.md#1">【思想领袖】美第三大党总统候选人的政治主张</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314439.md#1">巴黎酒店拒挂中共国旗事件发酵 华人踩五星旗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314555.md#1">被质疑为中共间谍的菲华裔女市长离境出逃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313950.md#1">进军大银幕票房翻车 张若昀被劝回去拍剧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314684.md#1">成本超2亿 新版《红楼梦》上映5天票房450万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314301.md#1">新《超人》5个月拍完 为保视觉品质后制需1年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/21/n14315378.md#1">范冰冰街头等车形单影只 脚上一细节网友震惊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/21/n14315424.md#1">杨颖现身港政协活动惹议 黄晓明新恋情登热搜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314281.md#1">不用冰箱 用这招可让番茄存放久一点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314654.md#1">为什么去日本旅游不要携带香水？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313114.md#1">别忽视心脏病早期微妙症状 哈佛：预防五步骤</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/22/n14315815.md#1">为何飞机客舱内都很冷？ 应该如何应对？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313844.md#1">花生原来是个宝！ 换个方式吃“抗氧化物双倍”</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545556.md#1">【佳音时刻】中共最怕什么？王毅曝党国机密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545082.md#1">沈舟：中共航母编队到香港 党媒泄老底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544964.md#1">近千家A股公司涉机器人业务 专家：资本在套利</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545439.md#1">中国出生率骤降 教师“铁饭碗”不再稳固</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545808.md#1">在正确时间帮植物浇水 避免引发真菌疾病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541355.md#1">你应该知道扁豆的所有健康益处</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/8/20/n14314321.htm">天道好还！看隔世七百年还债的故事</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314321.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
